<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="#FFFFFF"
    >

    <ImageView
        android:id="@+id/ivSelectImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/resimsec"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="fdsa"
        />

    <EditText

        android:id="@+id/etImageName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/ivSelectImage"
        app:layout_constraintStart_toStartOf="@+id/ivSelectImage"
        app:layout_constraintTop_toBottomOf="@id/ivSelectImage"



        android:hint="Image Name"
        android:padding="5dp"
        />

    <EditText


        android:id="@+id/etCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/ivSelectImage"
        app:layout_constraintStart_toStartOf="@+id/ivSelectImage"
        app:layout_constraintTop_toBottomOf="@id/etImageName"



        android:hint="Category"
        android:padding="5dp"
        />

    <EditText


        android:id="@+id/etRank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/ivSelectImage"
        app:layout_constraintStart_toStartOf="@+id/ivSelectImage"
        app:layout_constraintTop_toBottomOf="@id/etCategory"


        android:hint="Rank"
        android:padding="5dp"
        />

    <Button
        android:id="@+id/btnSave"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:text="Kaydet"


        app:layout_constraintTop_toBottomOf="@id/etRank"
        app:layout_constraintEnd_toEndOf="@id/etRank"
        app:layout_constraintStart_toStartOf="@id/etRank"
        android:layout_marginTop="20dp"

        android:paddingVertical="8dp"
        android:paddingHorizontal="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>